<resources>
    <string name="app_name">Butterfly</string>
    <!--Fackbook-->
    <string name="facebook_app_id">1937232573232561</string>
    <string name="fb_login_protocol_scheme">fb1937232573232561</string>


    <!--WelcomeActivity-->
    <string name="activity_welcome_copyright">Copyright @ 2017 Social Butterfly. All rights reserved.</string>
    <!--MainActivity-->
    <string name="activity_main_title">ButterFly</string>
    <string name="activity_main_social">Social</string>
    <string name="activity_main_business">Business</string>
    <string name="activity_main_project">Project</string>
    <string name="activity_main_contentDescription_imagebutton">imagebutton</string>
    <!--SocialActivity-->
    <string name="activity_accounts_accounts">Social</string>
    <string name="activity_accounts_facebook">Facebook</string>
    <string name="activity_accounts_snap">Snapchat</string>
    <string name="activity_accounts_instagram">Instagram</string>
    <!--LoginActivity-->
    <string name="activity_login_title">Login</string>
    <string name="activity_login_facebook">Facebook</string>
    <string name="activity_login_snap">Snap</string>
    <string name="activity_login_instagram">Instagram</string>
    <!--QRCodeActivity-->
    <string name="activity_qrcode_title">QRCode</string>
    ScanResultActivityvity-->
    <string name="activity_scaner_title">Scaner</string>
    <string name="activity_accounts_create_qr">Create QR</string>


</resources>
