<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--First Line-->
    <LinearLayout
        android:id="@+id/linLayFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:padding="20dp">

        <ImageButton
            android:id="@+id/imgbtnLoginFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:background="@drawable/ic_accounts_logout" />

        <TextView
            android:id="@+id/tvFacebook"
            style="@style/activity_accounts_textview"
            android:layout_marginRight="40dp"
            android:text="@string/activity_accounts_facebook" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/swFacebook"
            style="@style/activity_accounts_switch" />
    </LinearLayout>

    <!--Second Line-->
    <RelativeLayout
        android:id="@+id/linLaySnap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linLayFacebook"
        android:layout_alignRight="@+id/linLayFacebook"
        android:layout_below="@+id/linLayFacebook"
        android:padding="20dp">

        <ImageButton
            android:id="@+id/imgbtnLoginSnap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:background="@drawable/ic_accounts_logout" />

        <TextView
            android:id="@+id/tvSnap"
            style="@style/activity_accounts_textview"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imgbtnLoginSnap"
            android:text="@string/activity_accounts_snap" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/swSnap"
            style="@style/activity_accounts_switch"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <!--Third Line-->
    <RelativeLayout
        android:id="@+id/linLayInstagram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linLaySnap"
        android:layout_alignRight="@+id/linLaySnap"
        android:layout_below="@+id/linLaySnap"
        android:padding="20dp">

        <ImageButton
            android:id="@+id/imgbtnLoginInstagram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:background="@drawable/ic_accounts_logout" />

        <TextView
            android:id="@+id/tvInstagram"
            style="@style/activity_accounts_textview"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imgbtnLoginInstagram"
            android:text="@string/activity_accounts_instagram" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/swInstagram"
            style="@style/activity_accounts_switch"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

</RelativeLayout>
